fix(apps/web): add scrollbar styles on the global.css

--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -3,6 +3,14 @@
 @tailwind utilities;
 
 @layer base {
+  .overflow-dark-style {
+    scrollbar-color: #525252 transparent;
+  }
+
+  .overflow-light-style {
+    scrollbar-color: #a3a3a3 transparent;
+  }
+
   :root {
     @apply selection:bg-neutral-600/10 dark:selection:bg-neutral-400/20;
   }
